# zephyr-h723

./: .gitignore  .pre-commit-config.yaml  README.md  defaults.cfg
applications/: CMakeLists.txt  prj.conf
applications/boards/: nucleo_h723zg.overlay  qemu_x86.overlay
applications/dts/bindings/: pwm-servo.yaml
applications/lib/drivetrain/: CMakeLists.txt  drivetrain.c  drivetrain.h
applications/src/: main.c  main_old.c
